--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@ You&rsquo;re at the right place.
 Keep in mind that some commands could change from a distribution to another.
 As always, replace &lt;user&gt; by your username and &lt;hostame&gt; with your server&rsquo;s IP or URL.
 You should always follow the principle of least privilege: Components SHOULD NOT have access to anything they don&rsquo;t require.
+You should always use STRONG passwords or passphrases. It should not be guessable.
 
 Guides
 Hardening SSH
@@ -42,6 +43,7 @@ English is not my first language, sorry for grammar errors.">
 <li>Keep in mind that some commands could change from a distribution to another.</li>
 <li>As always, replace <strong>&lt;user&gt;</strong> by your username and <strong>&lt;hostame&gt;</strong> with your server&rsquo;s IP or URL.</li>
 <li>You should always follow the <strong>principle of least privilege</strong>: Components <strong>SHOULD NOT</strong> have access to anything <u>they don&rsquo;t require.</u></li>
+<li>You should always use <strong>STRONG</strong> passwords or passphrases. It should not be guessable.</li>
 </ul>
 <h1 id="guides">Guides</h1>
 <h4 id="hardening-ssh"><a href="/hardening_ssh">Hardening SSH</a></h4>
