--- a/public/index.html
+++ b/public/index.html
@@ -17,11 +17,7 @@ As always, replace &lt;user&gt; by your username and &lt;hostame&gt; with your s
 You should always follow the principle of least privilege: Components SHOULD NOT have access to anything they don&rsquo;t require.
 You should always use STRONG passwords or passphrases. It should not be guessable.
 
-Guides
-Hardening SSH
-Good resources
-Arch Wiki - Security
-English is not my first language, sorry for grammar errors.">
+I recommend you to follow the guides by the order (from above to the bottom)">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="robots" content="index, follow">
 	<meta charset="utf-8">
@@ -29,7 +25,8 @@ English is not my first language, sorry for grammar errors.">
 <body>
 <nav>
     <ul>
-	<a class="menuactive" href="/"><span class=pre></span><span class=menuname>◀️ Back to Home</span></a>
+        <a href="/"><span class=menuname>◀️ Back to Home</span></a><br><br>
+        <a href="/about"><span class=menuname>🔬 About</span></a>
     </ul>
 </nav>
 <main>
@@ -45,10 +42,14 @@ English is not my first language, sorry for grammar errors.">
 <li>You should always follow the <strong>principle of least privilege</strong>: Components <strong>SHOULD NOT</strong> have access to anything <u>they don&rsquo;t require.</u></li>
 <li>You should always use <strong>STRONG</strong> passwords or passphrases. It should not be guessable.</li>
 </ul>
+<p>I recommend you to follow the guides by the order (from above to the bottom)</p>
 <h1 id="guides">Guides</h1>
+<h4 id="basics-and-fundamentals"><a href="/basics-and-fundamentals">Basics and Fundamentals</a></h4>
 <h4 id="hardening-ssh"><a href="/hardening_ssh">Hardening SSH</a></h4>
+<hr>
 <h1 id="good-resources">Good resources</h1>
 <h4 id="arch-wiki---security"><a href="https://wiki.archlinux.org/title/Security">Arch Wiki - Security</a></h4>
+<hr>
 <p><em>English is not my first language, sorry for grammar errors.</em></p>
 
 
