--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,7 @@ I recommend you to follow the guides by the order (from above to the bottom)">
 <hr>
 <h1 id="good-resources">Good resources</h1>
 <h4 id="arch-wiki---security"><a href="https://wiki.archlinux.org/title/Security">Arch Wiki - Security</a></h4>
+<h4 id="arch-wiki---system-maintenance"><a href="https://wiki.archlinux.org/title/System_maintenance">Arch Wiki - System Maintenance</a></h4>
 <hr>
 <p><em>English is not my first language, sorry for grammar errors.</em></p>
 
