added jellyfin's page

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -107,6 +107,7 @@ Anyways, I am very happy about it, yet it draws quite a bit of energy</p>
 
 <div id="nextprev">
 <a href="/basics-and-fundamentals/"><div id="prevart">Previous:<br>Basics and Fundamentals</div></a>
+<a href="/jellyfin-debian-testing/"><div id="nextart">Next:<br>Install Jellyfin on Debian Testing without Docker</div></a>
 </div>
 <div style="clear:both" class=taglist>Article tags:<br><a id="tag_" href="http://localhost:1313/tags/"></a></div>
 </article>
