--- a/public/about/index.html
+++ b/public/about/index.html
@@ -19,8 +19,11 @@ I don&rsquo;t work in IT, i&rsquo;m not a professional, I&rsquo;m just a hobbyis
 </head>
 <body>
 <nav>
+    
+<script data-id="matomo-tracking" data-matomo-tracking-url='https://analytics.chopprr.cc/' data-matomo-tracking-id='1' src="/js/matomo-tracking.js" defer></script>
     <ul>
         <a href="/"><span class=menuname>◀️ Back to Home</span></a><br><br>
+        <a href="/privacy"><span class=menuname>🔐 Privacy</span></a><br><br>
         <a href="/about"><span class=menuname>🔬 About</span></a>
     </ul>
 </nav>
