--- a/public/basics-and-fundamentals/index.html
+++ b/public/basics-and-fundamentals/index.html
@@ -20,8 +20,11 @@ If you want to use a password manager, DON&rsquo;T USE ANY CLOUD BASED SERVICES:
 </head>
 <body>
 <nav>
+    
+<script data-id="matomo-tracking" data-matomo-tracking-url='https://analytics.chopprr.cc/' data-matomo-tracking-id='1' src="/js/matomo-tracking.js" defer></script>
     <ul>
         <a href="/"><span class=menuname>◀️ Back to Home</span></a><br><br>
+        <a href="/privacy"><span class=menuname>🔐 Privacy</span></a><br><br>
         <a href="/about"><span class=menuname>🔬 About</span></a>
     </ul>
 </nav>
