--- a/public/hardening_ssh/index.html
+++ b/public/hardening_ssh/index.html
@@ -18,8 +18,11 @@ Next, we want to disable password authentication, we will authenticate using an 
 </head>
 <body>
 <nav>
+    
+<script data-id="matomo-tracking" data-matomo-tracking-url='https://analytics.chopprr.cc/' data-matomo-tracking-id='1' src="/js/matomo-tracking.js" defer></script>
     <ul>
         <a href="/"><span class=menuname>◀️ Back to Home</span></a><br><br>
+        <a href="/privacy"><span class=menuname>🔐 Privacy</span></a><br><br>
         <a href="/about"><span class=menuname>🔬 About</span></a>
     </ul>
 </nav>
