--- a/public/jellyfin-debian-testing/index.html
+++ b/public/jellyfin-debian-testing/index.html
@@ -21,8 +21,11 @@ curl -fsSL https://repo.jellyfin.org/jellyfin_team.gpg.key | sudo gpg --dearmor 
 </head>
 <body>
 <nav>
+    
+<script data-id="matomo-tracking" data-matomo-tracking-url='https://analytics.chopprr.cc/' data-matomo-tracking-id='1' src="/js/matomo-tracking.js" defer></script>
     <ul>
         <a href="/"><span class=menuname>◀️ Back to Home</span></a><br><br>
+        <a href="/privacy"><span class=menuname>🔐 Privacy</span></a><br><br>
         <a href="/about"><span class=menuname>🔬 About</span></a>
     </ul>
 </nav>
@@ -81,6 +84,7 @@ There should be no issue.</p>
 
 <div id="nextprev">
 <a href="/about/"><div id="prevart">Previous:<br>About</div></a>
+<a href="/privacy/"><div id="nextart">Next:<br>Privacy</div></a>
 </div>
 <div style="clear:both" class=taglist>Article tags:<br><a id="tag_" href="http://localhost:1313/tags/"></a></div>
 </article>
