--- a/public/privacy/index.html
+++ b/public/privacy/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head>
 	<title>Privacy | Linux Server Maintenance</title>
-	<link rel="canonical" href="http://localhost:1313/">
+	<link rel="canonical" href="/">
 	<link rel='alternate' type='application/rss+xml' title="Linux Server Maintenance RSS" href='/index.xml'>
 	<link rel='stylesheet' type='text/css' href='/style.css'>
 	<link rel="icon" href="/favicon.ico">
@@ -26,7 +26,7 @@ Disable tracking
 <body>
 <nav>
     
-<script data-id="matomo-tracking" data-matomo-tracking-url='https://analytics.chopprr.cc/' data-matomo-tracking-id='1' src="/js/matomo-tracking.js" defer></script>
+<script data-id="matomo-tracking" data-matomo-tracking-url='https://analytics.chopprr.cc/' data-matomo-tracking-id='1' src="/js/matomo-tracking.min.d8e1498fb42aa6048c4db4ac8451d0141fe4a0a83a1b4857df2a67a0cabd350a.js"  defer></script>
     <ul>
         <a href="/"><span class=menuname>◀️ Back to Home</span></a><br><br>
         <a href="/privacy"><span class=menuname>🔐 Privacy</span></a><br><br>
@@ -41,8 +41,8 @@ Disable tracking
 <p>Matomo is used to collect anonymous statistics about this website.</p>
 <div class="MatomoOptout">
 <script data-id="promise-polyfill" data-promise-polyfill-url="/js/es6-promise.auto.min.f2a14fbc03102e3f6139790da043b488e5d0c76b47c80f175a4ca6e4edddc6a3.js" src="/js/promise-polyfill.min.159647c35ccb9da71d294095829881a9bbd38cc07f0fbf5df5c09e844cc3082d.js"  defer></script>
-<script data-id="matomo-optout" data-matomo-optout-url="https://analytics.chopprr.cc/" src="/js/matomo-optout.js" defer></script>
-<link rel="stylesheet" href="/css/matomo-optout.css">
+<script data-id="matomo-optout" data-matomo-optout-url="https://analytics.chopprr.cc/" src="/js/matomo-optout.min.cd5084cd4c4e1870d2fb02d9b00ad5a3e0f8806b9285a967db4dd87550f4dcf7.js"  defer></script>
+<link rel="stylesheet" href="/css/matomo-optout.min.ee15759251f0fa101c0ed9142a4e9c39ef5e093ca4d675ba05edd450ee9c0c7d.css" >
 <div class="MatomoOptout-message MatomoOptout-message--track is-hidden">You are being watched.</div>
 <div class="MatomoOptout-message MatomoOptout-message--block">You are not tracked.</div>
 <button class="MatomoOptout-button MatomoOptout-button--track">Allow tracking</button> 
@@ -53,14 +53,14 @@ Disable tracking
 
 
 <div id="nextprev">
-<a href="/jellyfin-debian-testing/"><div id="prevart">Previous:<br>Install Jellyfin on Debian Testing without Docker</div></a>
+<a href="/basics-and-fundamentals/"><div id="prevart">Previous:<br>Basics and Fundamentals</div></a>
 </div>
 
 </article>
 </main>
 
 <footer>
-	<a href="http://localhost:1313/">http://localhost:1313/</a><br><br><a href="/index.xml"><img src="/rss.svg" style="max-height:1.5em" alt="RSS Feed" title="Subscribe via RSS for updates."></a>
+	<a href="/">/</a><br><br><a href="/index.xml"><img src="/rss.svg" style="max-height:1.5em" alt="RSS Feed" title="Subscribe via RSS for updates."></a>
 </footer>
 
 </body>
