Added Cloudflare hardening article and rewrote the 'About' page.

--- a/public/basics-and-fundamentals/index.html
+++ b/public/basics-and-fundamentals/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
 	<title>Basics and Fundamentals | Linux Server Maintenance</title>
-	<link rel="canonical" href="/">
+	<link rel="canonical" href="http://localhost:1313/">
 	<link rel='alternate' type='application/rss+xml' title="Linux Server Maintenance RSS" href='/index.xml'>
 	<link rel='stylesheet' type='text/css' href='/style.css'>
 	<link rel="icon" href="/favicon.ico">
@@ -12,7 +12,7 @@ You&rsquo;ll be wasting your time Hardening your server if your password is 1234
 
 Store your passwords
 
-If you want to use a password manager, DON&rsquo;T USE ANY CLOUD BASED SERVICES: What&rsquo;s the point of having strong passwords if you store them on anyone else&rsquo;s computer? If you really want a remote password manager accessible from anywhere, I recommend Vaultwarden (which is a Bitwarden reimplementation)">
+If you want to use a password manager, DON&rsquo;T USE ANY CLOUD BASED SERVICES: What&rsquo;s the point of having strong passwords if you store them on anyone else&rsquo;s computer? If you really want a remote password manager accessible from anywhere, I recommend Vaultwarden (which is a Bitwarden reimplementation in Rust)">
 	<meta name="keywords" content="Security">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="robots" content="index, follow">
@@ -20,11 +20,8 @@ If you want to use a password manager, DON&rsquo;T USE ANY CLOUD BASED SERVICES:
 </head>
 <body>
 <nav>
-    
-<script data-id="matomo-tracking" data-matomo-tracking-url='https://analytics.chopprr.cc/' data-matomo-tracking-id='1' src="/js/matomo-tracking.min.d8e1498fb42aa6048c4db4ac8451d0141fe4a0a83a1b4857df2a67a0cabd350a.js"  defer></script>
     <ul>
         <a href="/"><span class=menuname>◀️ Back to Home</span></a><br><br>
-        <a href="/privacy"><span class=menuname>🔐 Privacy</span></a><br><br>
         <a href="/about"><span class=menuname>🔬 About</span></a>
     </ul>
 </nav>
@@ -38,7 +35,7 @@ If you want to use a password manager, DON&rsquo;T USE ANY CLOUD BASED SERVICES:
 <br>
 <h1 id="store-your-passwords">Store your passwords</h1>
 <hr>
-<p>If you want to use a password manager, <strong>DON&rsquo;T USE ANY CLOUD BASED SERVICES</strong>: What&rsquo;s the point of having strong passwords <u>if you store them on anyone else&rsquo;s computer?</u> If you really want a remote password manager accessible from anywhere, I recommend <strong>Vaultwarden</strong> (which is a <strong>Bitwarden</strong> reimplementation)</p>
+<p>If you want to use a password manager, <strong>DON&rsquo;T USE ANY CLOUD BASED SERVICES</strong>: What&rsquo;s the point of having strong passwords <u>if you store them on anyone else&rsquo;s computer?</u> If you really want a remote password manager accessible from anywhere, I recommend <strong>Vaultwarden</strong> (which is a <strong>Bitwarden</strong> reimplementation in <strong>Rust</strong>)</p>
 <p>IMO, something offline should be prefered, in this case, I recommend <strong>KeePassXC</strong>.</p>
 <br>
 <h1 id="keep-your-system-up-to-date">Keep your system up-to-date</h1>
@@ -64,14 +61,14 @@ If you want to use a password manager, DON&rsquo;T USE ANY CLOUD BASED SERVICES:
 
 <div id="nextprev">
 <a href="/hardening_ssh/"><div id="prevart">Previous:<br>Hardening SSH</div></a>
-<a href="/privacy/"><div id="nextart">Next:<br>Privacy</div></a>
+<a href="/about/"><div id="nextart">Next:<br>About</div></a>
 </div>
-<div style="clear:both" class=taglist>Article tags:<br><a id="tag_security" href="/tags/security">Security</a></div>
+<div style="clear:both" class=taglist>Article tags:<br><a id="tag_security" href="http://localhost:1313/tags/security">Security</a></div>
 </article>
 </main>
 
 <footer>
-	<a href="/">/</a><br><br><a href="/index.xml"><img src="/rss.svg" style="max-height:1.5em" alt="RSS Feed" title="Subscribe via RSS for updates."></a>
+	<a href="http://localhost:1313/">http://localhost:1313/</a><br><br><a href="/index.xml"><img src="/rss.svg" style="max-height:1.5em" alt="RSS Feed" title="Subscribe via RSS for updates."></a>
 </footer>
 
 </body>
