--- a/public/hardening_ssh/index.html
+++ b/public/hardening_ssh/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
 	<title>Hardening SSH | Linux Server Maintenance</title>
-	<link rel="canonical" href="/">
+	<link rel="canonical" href="http://localhost:1313/">
 	<link rel='alternate' type='application/rss+xml' title="Linux Server Maintenance RSS" href='/index.xml'>
 	<link rel='stylesheet' type='text/css' href='/style.css'>
 	<link rel="icon" href="/favicon.ico">
@@ -18,11 +18,8 @@ Next, we want to disable password authentication, we will authenticate using an 
 </head>
 <body>
 <nav>
-    
-<script data-id="matomo-tracking" data-matomo-tracking-url='https://analytics.chopprr.cc/' data-matomo-tracking-id='1' src="/js/matomo-tracking.min.d8e1498fb42aa6048c4db4ac8451d0141fe4a0a83a1b4857df2a67a0cabd350a.js"  defer></script>
     <ul>
         <a href="/"><span class=menuname>◀️ Back to Home</span></a><br><br>
-        <a href="/privacy"><span class=menuname>🔐 Privacy</span></a><br><br>
         <a href="/about"><span class=menuname>🔬 About</span></a>
     </ul>
 </nav>
@@ -108,12 +105,12 @@ enabled = true
 
 <div id="nextprev"><a href="/basics-and-fundamentals/"><div id="nextart">Next:<br>Basics and Fundamentals</div></a>
 </div>
-<div style="clear:both" class=taglist>Article tags:<br><a id="tag_ssh" href="/tags/ssh">SSH</a> &middot; <a id="tag_security" href="/tags/security">Security</a></div>
+<div style="clear:both" class=taglist>Article tags:<br><a id="tag_ssh" href="http://localhost:1313/tags/ssh">SSH</a> &middot; <a id="tag_security" href="http://localhost:1313/tags/security">Security</a></div>
 </article>
 </main>
 
 <footer>
-	<a href="/">/</a><br><br><a href="/index.xml"><img src="/rss.svg" style="max-height:1.5em" alt="RSS Feed" title="Subscribe via RSS for updates."></a>
+	<a href="http://localhost:1313/">http://localhost:1313/</a><br><br><a href="/index.xml"><img src="/rss.svg" style="max-height:1.5em" alt="RSS Feed" title="Subscribe via RSS for updates."></a>
 </footer>
 
 </body>
